--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.8.1",
     "file-saver": "^2.0.5",
+    "firebase": "^11.4.0",
     "framer-motion": "^12.0.3",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
